<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Carbon Fibers</string>
    <string name="user_interface">Interface</string>
    <string name="lockscreen_title">Lockscreen</string>
    <string name="navbar_title">Navigation</string>
    <string name="toggles_title">Statusbar toggles</string>
    <string name="bars">Bar Interface</string>
    <string name="system">System</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="empty">Empty</string>
    <string name="title_clipboard_share">Copy to Clipboard</string>
    <string name="themes_title">Themes</string>
    <string name="clipboard_notification">Copied to clipboard</string>
    <string name="header_summary">@null</string>
    <string name="device_tools_title">Device tool</string>
    <string name="menu_main_activity_change_locale">Locale</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="misc_short">Misc</string>
    <string name="custom_app_icon_successfully">"'s icon set successfully!"</string>
    <string name="text_on">On</string>
    <string name="text_off">Off</string>
    <string name="use_custom_app_title">Use custom application</string>
    <string name="use_custom_app_summary">Use custom application instead of the recent applications dialog</string>
    <string name="group_applications">Applications</string>
    <string name="choose_application">Choose application</string>
    <string name="select_application">Select application</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#FF000000</string>
    <string name="set">Set</string>
    <string name="ics_color">Holo</string>
    <string name="color_default">Default</string>
    <string name="lock_screen_title">Lock screen</string>
    <string name="lock_screen_general_category">General</string>
    <string name="lock_screen_buttons_category">Buttons</string>
    <string name="lock_screen_targets_category">Targets</string>
    <string name="lock_screen_ad_category">Active Display</string>
    <string name="lock_screen_advanced_category">Advanced</string>
    <string name="lockscreen_target_info">Drag the slider to targets to assign shortcuts</string>
    <string name="lockscreen_target_title">Slider shortcuts</string>
    <string name="lockscreen_target_summary">View or change custom lock screen shortcuts</string>
    <string name="lockscreen_target_reset">Lock screen shortcuts reset to default</string>
    <string name="lockscreen_target_save">Lock screen shortcuts saved</string>
    <string name="lockscreen_target_reset_title">Reset</string>
    <string name="lockscreen_target_reset_message">Delete all user created lock screen shortcuts and restore to default?</string>
    <string name="lockscreen_target_empty">Empty</string>
    <string name="lockscreen_target_edit_title">Edit shortcut and icon</string>
    <string name="lockscreen_target_edit_msg">Select or change the desired application or activity and the associated icon</string>
    <string name="lockscreen_battery_status_title">Battery status</string>
    <string name="lockscreen_battery_status_charging">Only when charging</string>
    <string name="lockscreen_battery_status_alwayson">Always on</string>
    <string name="lockscreen_battery_status_alwaysoff">Always off</string>
    <string name="lockscreen_minimize_challenge_title">Minimize lockscreen challenge</string>
    <string name="lockscreen_minimize_challenge_summary">Set whether the lockscreen challenge (circle, pattern, pin) is minimized when the screen is turned on.</string>
    <string name="battery_around_lockscreen_ring">Battery level around lock ring</string>
    <string name="picker_activities">Activities</string>
    <string name="power_widget_title">Power widget</string>
    <string name="power_menu_title">Power menu</string>
    <string name="lockscreen_buttons_title">Button actions</string>
    <string name="lockscreen_buttons_summary">View or change lock screen button actions</string>
    <string name="status_bar_title">Statusbar</string>
    <string name="status_bar_general_title">General</string>
    <string name="status_bar_style_title">Style</string>
    <string name="status_bar_signal_title">Signal status</string>
    <string name="status_bar_signal_text_title">Signal status style</string>
    <string name="icon_color_behavior_title">Custom icon color</string>
    <string name="icon_color_behavior_summary">This will filter your current statusbar system icon to your preferred color</string>
    <string name="status_icon_color_summary">Choose your preferred color</string>
    <string name="brightness_slider_title">Brightness slider</string>
    <string name="brightness_slider_summary">Change the brightness by sliding your finger across the statusbar. Note: Will not be active when auto-brightness is on</string>
    <string name="lockscreen_music_controls_title">Music controls</string>
    <string name="lockscreen_music_controls_summary">Show player controls while music is playing</string>
    <string name="transparency_dialog_title">Transparency settings</string>
    <string name="navbar_hide">NavBar hide Options</string>
    <string name="navbar_button_cat">Buttons</string>
    <string name="navbar_color_cat">Colors and transparency</string>
    <string name="title_pref_menu_display">Menu location</string>
    <string name="summary_pref_menu_display">Remember to remove buttons if using big menu button</string>
    <string name="title_pref_navigation_menu_display">Menu visibility</string>
    <string name="summary_pref_navigation_menu_display">How and when do you want the menu buttons</string>
    <string name="button_transparency_title">Button transparency</string>
    <string name="navbar_widgets">Navbar widgets</string>
    <string name="navbar_enable_bar">Enable navbar</string>
    <string name="navigation_bar_height_title">Navbar height</string>
    <string name="navigation_bar_height_summary">Navbar height while in portrait mode</string>
    <string name="navigation_bar_height_landscape_title">Height landscape</string>
    <string name="navigation_bar_height_landscape_summary">Navbar height while in landscape</string>
    <string name="navigation_bar_width_title">Navbar width</string>
    <string name="navigation_bar_width_summary">Navbar height if the bar is along left side</string>
    <string name="navigation_bar_tint_title">Navbar button color</string>
    <string name="navigation_bar_glow_tint_title">Navbar glow</string>
    <string name="navigation_bar_glow_tint_summary">Change the color of the glow</string>
    <string name="glow_times_title">Button glow</string>
    <string name="navigation_bar_color_title">Navbar color</string>
    <string name="navbar_widgets_title">Configure widgets</string>
    <string name="navigation_bar_menu_arrow_keys_title">Menu arrow keys</string>
    <string name="navigation_bar_menu_arrow_keys_summary">Show arrow keys in the navbar while typing</string>
    <string name="navbar_hide_enable_title">Hidden navbar enable</string>
    <string name="drag_handle_opacity_title">Drag handle opacity</string>
    <string name="drag_handle_width_title">Drag handle width</string>
    <string name="title_navbar_timeout">Hidden navbar timeout</string>
    <string name="summary_navbar_timeout">Timeout time for hidden navbar window</string>
    <string name="hardware_keys_options_title">Hardware Keys</string>
    <string name="miscellaneous_options_title">Miscellaneous</string>
    <string name="lock_clock_title">Clock widget</string>
    <string name="lock_clock_summary">View or change how the widget will display</string>
    <string name="lockscreen_hide_initial_page_hints_title">Hide initial page hints</string>
    <string name="lockscreen_hide_initial_page_hints_summary">Set whether the hints for the left and right widgets are shown when the screen is turned on.</string>
    <string name="lockscreen_quick_unlock_control_title">Quick pin unlock</string>
    <string name="lockscreen_quick_unlock_control_summary">Unlock password/pin lockscreen without pressing enter button</string>
    <string name="lockscreen_all_widgets_title">Allow all widgets</string>
    <string name="lockscreen_all_widgets_summary">Warning: Some widgets are not intended to be used on the lockscreen. Do not blame the widget maker or Carbon if your widget misbehaves. Choose responsibly!</string>
    <string name="lockscreen_camera_widget_title">Camera widget</string>
    <string name="alt_resolver_title">Use alternate default app picker</string>
    <string name="lockscreen_style_options_title">Lock screen style</string>
    <string name="lockscreen_custom_background_title">Background</string>
    <string name="lockscreen_alpha_title">Background transparency</string>
    <string name="button_settings">Buttons</string>
    <string name="hardware_keys_show_overflow_title">Show action overflow</string>
    <string name="hardware_keys_show_overflow_summary">Display the 3-dot overflow menu button within apps</string>
    <string name="statusbar_behavior_title">Statusbar behavior</string>
    <string name="statusbar_quick_peek_title">Quick peek</string>
    <string name="statusbar_quick_peek_summary">Peek at the statusbar when hidden by swiping down from top edge of screen</string>
    <string name="lcd_density_title">LCD density</string>
    <string name="lcd_density_summary">unknown</string>
    <string name="activity_open_title">Activity Open Animation</string>
    <string name="activity_close_title">Activity Close Animation</string>
    <string name="task_open_title">Task Open Animation</string>
    <string name="task_close_title">Task Close Animation</string>
    <string name="task_move_to_front_title">Move To Front Animation</string>
    <string name="task_move_to_back_title">Move To Back Animation</string>
    <string name="wallpaper_open_title">Wallpaper Open Animation</string>
    <string name="wallpaper_close_title">Wallpaper Close Animation</string>
    <string name="wallpaper_intra_open_title">Wallpaper Intra Open Animation</string>
    <string name="wallpaper_intra_close_title">Wallpaper Intra Close Animation</string>
    <string name="animation_duration_title">Animation Duration</string>
    <string name="title_animation_no_override">Prevent App Overrides</string>
    <string name="summary_animation_no_override">Prevent apps from overriding transitions.</string>
    <string name="list_view_title">Scrolling</string>
    <string name="listview_animation_title">Scroll Animation</string>
    <string name="listview_interpolator_title">Scroll Interpolator</string>
    <string name="lockscreen_glow_torch_title">GlowPad torch</string>
    <string name="lockscreen_glow_torch_summary">Longpressing the center of the lock ring or navigation ring will
        turn torch on.  Release finger to turn torch off.</string>
    <string name="recents_target_assist_title">Show Google Assistant</string>
    <string name="recents_target_assist_summary">Access Google Now or long press to voice search</string>
    <string name="pref_low_battery_warning_policy_title">Low battery warning</string>
    <string name="pref_low_battery_warning_policy_dialog_title">Indicate low battery warning with:</string>
    <string name="show_lte_or_fourgee_title">Show 4G icon</string>
    <string name="show_lte_or_fourgee_summary">Use 4G network icon instead of LTE</string>
    <string name="show_network_speed">Network speed indicator</string>
    <string name="show_network_speed_summary">Show network speed in statusbar (Thinking Bridge)</string>
</resources>