<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <CheckBoxPreference
            android:key="animation_no_override"
            android:title="@string/title_animation_no_override"
            android:summary="@string/summary_animation_no_override" />

        <ListPreference
            android:key="activity_open"
            android:title="@string/activity_open_title" />

        <ListPreference
            android:key="activity_close"
            android:title="@string/activity_close_title" />

        <ListPreference
            android:key="task_open"
            android:title="@string/task_open_title" />

        <ListPreference
            android:key="task_close"
            android:title="@string/task_close_title" />

        <ListPreference
            android:key="task_move_to_front"
            android:title="@string/task_move_to_front_title" />

        <ListPreference
            android:key="task_move_to_back"
            android:title="@string/task_move_to_back_title" />
            
        <ListPreference
            android:key="wallpaper_open"
            android:title="@string/wallpaper_open_title" />

        <ListPreference
            android:key="wallpaper_close"
            android:title="@string/wallpaper_close_title" />

        <ListPreference
            android:key="wallpaper_intra_open"
            android:title="@string/wallpaper_intra_open_title" />

        <ListPreference
            android:key="wallpaper_intra_close"
            android:title="@string/wallpaper_intra_close_title" />

        <com.carbon.settings.widgets.AnimBarPreference
            android:key="animation_duration"
            android:title="@string/animation_duration_title" />

        <PreferenceCategory
            android:key="list_view"
            android:title="@string/list_view_title">

            <ListPreference
                android:key="listview_animation"
                android:dialogTitle="@string/listview_animation_title"
                android:title="@string/listview_animation_title"
                android:entries="@array/listview_animation_entries"
                android:entryValues="@array/listview_animation_values"
                android:defaultValue="1" />

            <ListPreference
                android:key="listview_interpolator"
                android:dialogTitle="@string/listview_interpolator_title"
                android:title="@string/listview_interpolator_title"
                android:entries="@array/listview_interpolator_entries"
                android:entryValues="@array/listview_interpolator_values"
                android:defaultValue="0" />

        </PreferenceCategory>

</PreferenceScreen>

