<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <PreferenceCategory
                android:key="navbar_colors_cat"
                android:title="@string/navbar_color_cat" >

               <net.margaritov.preference.colorpicker.ColorPickerPreference
                       android:key="nav_bar_color"
                       android:title="@string/navigation_bar_color_title"
                       android:defaultValue="0xff000000" />

               <net.margaritov.preference.colorpicker.ColorPickerPreference
                       android:key="nav_button_color"
                       android:title="@string/navigation_bar_tint_title"
                       android:defaultValue="0xffffffff" />

               <net.margaritov.preference.colorpicker.ColorPickerPreference
                       android:key="nav_button_glow_color"
                       android:title="@string/navigation_bar_glow_tint_title"
                       android:summary="@string/navigation_bar_glow_tint_summary"
                       android:defaultValue="0xffffffff" />

               <com.carbon.settings.widgets.SeekBarPreference
                   android:key="button_transparency"
                   android:title="@string/button_transparency_title" />

        </PreferenceCategory>

        <PreferenceCategory
                android:key="advanced_cat"
                android:title="@string/advanced_settings">

                <ListPreference
                    android:entries="@array/glow_times_entries"
                    android:entryValues="@array/glow_times_values"
                    android:key="glow_times"
                    android:title="@string/glow_times_title"
                    android:defaultValue="100|10"
                    android:persistent="false" />

                <com.carbon.settings.widgets.SeekBarPreference
                        android:key="navigation_bar_height"
                        android:title="@string/navigation_bar_height_title"
                        android:summary="@string/navigation_bar_height_summary" />

                <com.carbon.settings.widgets.SeekBarPreference
                        android:key="navigation_bar_height_landscape"
                        android:title="@string/navigation_bar_height_landscape_title"
                        android:summary="@string/navigation_bar_height_landscape_summary" />

                <com.carbon.settings.widgets.SeekBarPreference
                        android:key="navigation_bar_width"
                        android:title="@string/navigation_bar_width_title"
                        android:summary="@string/navigation_bar_width_summary" />

        </PreferenceCategory>

</PreferenceScreen>
