<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

   <header
        android:title="@string/user_interface" />

    <!-- Interface -->
    <header
        android:id="@+id/interface_settings"
        android:fragment="com.carbon.settings.fragments.InterfaceSettings"
        android:title="@string/user_interface"
        android:icon="@drawable/ic_carbon_interface" />

    <!-- Lock screen -->
    <header
        android:id="@+id/lock_screen_settings"
        android:fragment="com.carbon.settings.fragments.LockscreenInterface"
        android:title="@string/lockscreen_title"
        android:icon="@drawable/ic_carbon_lockscreen" />

    <!-- Navigation -->
    <header
        android:id="@+id/nav_bar"
        android:fragment="com.carbon.settings.fragments.Navbar"
        android:title="@string/navbar_title"
        android:icon="@drawable/ic_carbon_navbar" />

    <!-- Power menu -->
    <header
        android:id="@+id/power_menu"
        android:fragment="com.carbon.settings.fragments.PowerMenu"
        android:title="@string/power_menu_title"
        android:icon="@drawable/ic_carbon_powermenu"
        android:summary="@string/header_summary" />

    <!-- Power widget -->
    <header
        android:id="@+id/power_widget_settings"
        android:fragment="com.carbon.settings.fragments.PowerWidget"
        android:title="@string/power_widget_title"
        android:icon="@drawable/ic_carbon_powerwidget"
        android:summary="@string/header_summary" />

    <!-- Status bar -->
    <header
        android:id="@+id/status_bar"
        android:fragment="com.carbon.settings.fragments.StatusBar"
        android:title="@string/status_bar_title"
        android:icon="@drawable/ic_carbon_statusbar" />

    <!-- Statusbar Toggles -->
    <header
        android:id="@+id/statusbar_toggles"
        android:fragment="com.carbon.settings.fragments.StatusBarToggles"
        android:title="@string/toggles_title"
        android:icon="@drawable/ic_carbon_quicksettings" />

</preference-headers>
